# blocked-compression

./: build.sh
.cache/clangd/index/: adler32.c.172A23E431F651DB.idx  adler32_avx.c.AB992481D85E9571.idx  adler32_ssse3.c.06657C2E32FD6F3D.idx  allocations.h.667B53B4387BE3E2.idx  b2bench.c.2FF87FA40EC794B0.idx  b2nd.c.64A2168ADDC4334D.idx  b2nd.h.F641DB99AA1F6235.idx  b2nd_utils.c.173E4459971EC40D.idx  base.h.311198F31ABD6190.idx  bits.h.5127F2FDD675281A.idx  (+383 more)
src/: CMakeLists.txt  compress.hpp  test.cpp
src/.cache/clangd/index/: adler32.c.172A23E431F651DB.idx  adler32_avx.c.AB992481D85E9571.idx  adler32_p.h.EE10CB47BAACBBE5.idx  adler32_ssse3.c.06657C2E32FD6F3D.idx  b2bench.c.2FF87FA40EC794B0.idx  b2nd-private.h.E93E8A88757D160C.idx  b2nd.c.64A2168ADDC4334D.idx  b2nd_utils.c.173E4459971EC40D.idx  base.h.311198F31ABD6190.idx  bench_get_slice.c.23C8650C4D1EEF53.idx  bench_stack_append.c.6114E1A55D09ACA4.idx  bench_zfp_getitem.c.8712E1DEEEF4B130.idx  bitshuffle-avx2.c.5E89CDFF3D731125.idx  bitshuffle-avx2.h.8D49861DC90AF544.idx  bitshuffle-avx512.c.DCD85ABBCAF8C75E.idx  bitshuffle-avx512.h.1F3447B161521930.idx  bitshuffle-generic.c.3A217FBFC4B441DC.idx  bitshuffle-generic.h.03EF768A23F597C1.idx  bitshuffle-sse2.c.C6F48A77A765455A.idx  bitshuffle-sse2.h.CA9161B2F4DDF7A3.idx  bitstream.c.8BE73DB155269B25.idx  bitstream.c.FB88435B0BEF4374.idx  bitstream.h.A20DCC67F8293D5D.idx  blosc-private.h.EA7FC148C236F878.idx  blosc2-common.h.3ED5B9D993FF9286.idx  blosc2-export.h.47DCE6DB20562997.idx  blosc2-stdio.c.48D1879C37613918.idx  blosc2-stdio.h.27E4498C73B38324.idx  blosc2-zfp.c.F8F5F9CF6C7AD8FF.idx  blosc2.c.624AE4AC1E7DC03A.idx  blosc2.h.73DC67A501DD844C.idx  blosclz.c.730B76A8531B3B21.idx  blosclz.h.0B3A050C5CE58ECF.idx  bytedelta.c.F8D8C1C98BAFFC23.idx  bytedelta.h.6F60B8DE31DE8260.idx  chunkset.c.1381192A01B233A6.idx  chunkset_avx.c.91644FB3B8619F42.idx  chunkset_sse.c.9329C4BBA4476557.idx  chunkset_tpl.h.59044F8913785B56.idx  codec.c.CE7D0459C5C48A33.idx  (+341 more)
